# elm_c_wasm

./: CMakeLists.txt  Readme.md
src/: CMakeLists.txt
src/kernel/: CMakeLists.txt  kernel.h
src/kernel/core/: CMakeLists.txt  basics.c  bitwise.c  char.c  core.h  dynamic-array.c  js-array.c  list.c  platform.c  process.c  queue.c  scheduler.c  string-builder.c  string.c  types.c  types.h  utils.c
src/kernel/core/debug/: core-evaluators.c  debug-c.c  debug-elm.c  debug-perf.c  debug.c  debug.h  log.c
src/kernel/core/gc/: allocate.c  bitmap.c  compact.c  gc.c  header.c  heap.c  internals.h  mark.c  stack.c
src/kernel/elm-test/: elm-test.c
src/kernel/json/: decode.c  encode.c  json-internal.h  json.c  json.h  parse.c  stringify.c
src/kernel/wrapper/: wrapper.c  wrapper.h
src/lib/: CMakeLists.txt
src/lib/stb/: stb_sprintf.h
src/lib/wingetopt/: wingetopt.c  wingetopt.h
src/test/: CMakeLists.txt  basics_test.c  char_test.c  debug_test.c  gc_test.c  json_test.c  list_test.c  platform_test.c  string_test.c  test-compiled.c  test-imports.c  test.c  test.h  types_test.c  utils_test.c  wrapper_test.c
src/test/gc/: bitmap_test.c  stackmap_test.c
src/test/json/: json_decoder_test.c  json_encoder_test.c  json_parser_test.c
src/test/perf/: field_search_perf.c
src/test/platform/: app_startup_test.c  app_update_test.c  mock-generated-code.c  scheduler_test.c
